src/objects/zoom_app__Zoom_Webinar_Registrant__c.object
<CustomObject>
    <fields>
        <fullName>zoom_app__Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zoom_app__External_key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Registrant_ID on Zoom Website</description>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zoom_app__First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Industry__c</fullName>
        <label>Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Job_Title__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Join_Url1__c</fullName>
        <label>Join Url</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Join_Url__c</fullName>
        <label>Join Url (deprecated)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Org__c</fullName>
        <label>Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zoom_app__State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Pending for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zoom_app__Zip__c</fullName>
        <label>Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Webinar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Webinar</label>
        <referenceTo>zoom_app__Zoom_Webinar__c</referenceTo>
        <relationshipLabel>Zoom Webinar Registrants</relationshipLabel>
        <relationshipName>Zoom_Webinar_Registrants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zoom Webinar Registrant</label>
    <listViews>
        <fullName>zoom_app__All</fullName>
        <columns>NAME</columns>
        <columns>zoom_app__External_key__c</columns>
        <columns>zoom_app__First_Name__c</columns>
        <columns>zoom_app__Last_Name__c</columns>
        <columns>zoom_app__Email__c</columns>
        <columns>zoom_app__Phone__c</columns>
        <columns>zoom_app__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zoom_app__Pending_for_Approval</fullName>
        <columns>NAME</columns>
        <columns>zoom_app__Email__c</columns>
        <columns>zoom_app__First_Name__c</columns>
        <columns>zoom_app__Last_Name__c</columns>
        <columns>zoom_app__Zoom_Webinar__c</columns>
        <columns>zoom_app__Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>zoom_app__Status__c</field>
            <operation>equals</operation>
            <value>Pending for Approval</value>
        </filters>
        <label>Pending for Approval</label>
    </listViews>
    <nameField>
        <displayFormat>Reg-{0000}</displayFormat>
        <label>Zoom Webinar Registrant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Webinar Registrants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>